Right white space bug fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -578,6 +578,7 @@ body {
 
 .section-paintings {
   width: 100vw;
+  max-width: 100%;
   display: block; }
   .section-paintings::after {
     content: "";
