--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,6 +13,7 @@
     &-paintings {
         
         width: 100vw;
+        max-width: 100%;
         display: block;
         @include clearfix;
         
